--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,12 +14,18 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+//https://proandroiddev.com/parcelable-in-kotlin-here-comes-parcelize-b998d5a5fcac
+androidExtensions {
+    experimental = true
 }
 
 dependencies {
