--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,17 @@ androidExtensions {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.hendraanggrian:pikasso:0.2'
+    implementation 'com.mikepenz:fastadapter-commons:3.2.5'
+    implementation 'com.mikepenz:fastadapter:3.2.5'
+    implementation 'com.beust:klaxon:3.0.1'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.github.kikoso:SwipeableCards:1.1-RELEASE@aar'
 }
