--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     implementation 'com.mikepenz:fastadapter:3.2.5'
     implementation 'com.beust:klaxon:3.0.1'
     implementation 'com.android.volley:volley:1.1.0'
-    implementation 'com.github.kikoso:SwipeableCards:1.1-RELEASE@aar'
+    implementation 'com.daprlabs.aaron:swipedeck:2.0.6'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
