--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".RegisterActivity"/>
-        <activity android:name=".WaitingRoomActivity"/>
-        <activity android:name=".CallActivity"></activity>
-        <activity android:name=".DoctorChoiceActivity"></activity>
+        <activity android:name=".activities.MainActivity"/>
+        <activity android:name=".activities.RegisterActivity"/>
+        <activity android:name=".activities.WaitingRoomActivity"/>
+        <activity android:name=".activities.CallActivity"></activity>
+        <activity android:name=".activities.SpecializationListActivity"></activity>
     </application>
 
 </manifest>
