--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.daprlabs.aaron:swipedeck:2.0.6'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation "com.mikepenz:materialize:1.1.2@aar"
 }
