--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity android:name=".activities.WaitingRoomActivity" />
         <activity android:name=".activities.CallActivity" />
         <activity android:name=".activities.SpecializationListActivity" />
-        <activity android:name=".activities.SymptomsActivity"></activity>
+        <activity android:name=".activities.SymptomsActivity"/>
     </application>
 
 </manifest>
